ws-slo/apps/prowlarr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
  serviceName: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: prowlarr
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 9696
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
            readOnlyRootFilesystem: false
      securityContext:
        fsGroup: 1000
      volumes:
        - name: run
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
