ws-slo/apps/prowlarr/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: lidarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: whisparr
      ports:
        - port: https
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
  policyTypes:
    - Ingress
